# Project-Inglenook

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README  README.md  index.html  params.json  setup-builds.sh
cmake/: version_git.cmake
logging/common/: log_client.cpp  log_client.h  log_entry.cpp  log_entry.h  log_entry_buffer.h  log_entry_buffered.cpp  log_entry_modifiers.h  log_exceptions.h  log_writer.cpp  log_writer.h  logging.h
logging/example/: main.cpp
resources/hardware/samsung/lms700kf07/: pi-config.txt
schemas/: inglenook-log.xsd
src/: CMakeLists.txt  doxy-namespaces.h
src/cli/: CMakeLists.txt
src/cli/idt-man/: CMakeLists.txt  idt-man.8.manpage  main.cpp
src/cli/ign_locate/: CMakeLists.txt  ign_locate.1.manpage  ign_locate.8.manpage  main.cpp  program_options.h  version.h
src/cli/ign_log_write/: CMakeLists.txt  ign_log_write.1.manpage  ign_logging.sh  log_write_actions.cpp  log_write_actions.h  log_write_exceptions.h  main.cpp  program_options.h  tests.cpp
src/cli/ist-locate/: CMakeLists.txt  main.cpp
src/doc/: README  doxy-namespaces.h  project-inglenook.doxy
src/examples/: CMakeLists.txt
src/examples/cli/: CMakeLists.txt
src/examples/cli/ign_log_write/: CMakeLists.txt  ign_log_write_sample.sh
src/examples/lib/: CMakeLists.txt
src/examples/lib/ign_logging/: 01-basic.cpp  02-threading.cpp  03-otr-and-fallback.cpp  CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/ign_config/: CMakeLists.txt  config.cpp  config.h  config_exceptions.h  config_keys.h  tests.cpp
src/lib/ign_core/: CMakeLists.txt  application.cpp  application.h  application_exceptions.h  application_program_options.h  environment.cpp  environment.h  environment_exceptions.h  environment_variables.h  exceptions.h  file_permissions.cpp  file_permissions.h  filesystem.cpp  filesystem.h  tests.cpp
src/lib/ign_directories/: CMakeLists.txt  directories.cpp  directories.h  tests.cpp
src/lib/ign_logging/: CMakeLists.txt  all_tests.cpp  log_client.cpp  log_client.h  log_client_tests.h  log_entry.cpp  log_entry.h  log_entry_buffered.cpp  log_entry_buffered.h  log_entry_buffered_tests.h  log_entry_modifiers.h  log_entry_modifiers_tests.h  log_entry_tests.h  log_exceptions.h  log_writer.cpp  log_writer.h  log_writer_tests.h  logging.cpp  logging.h  logging_tests.h
src/lib/ign_logging/schemas/: inglenook-log-file.xsd
src/lib/ild/: CMakeLists.txt  ILD.cpp  ILD.h
src/lib/ist/: CMakeLists.txt  Config.cpp  Config.h  Directories.cpp  Directories.h  Environment.cpp  Environment.h
src/srv/: CMakeLists.txt
technical/design/high-level/: basic-authentication-process.vsd  basic-authorization-process.vsd  basic-host-modules.vsd  basic-update-process.vsd  inglenook-overview.vsd
